Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Made CPS use the "semantic" plugin if FCKeditor is used. This Fixes #502.
Bug fixes:
~~~~~~~~~~
- Search ZCText widget rendering was presenting a field selection even if
  there was only one field available.
- Moved the "EditorAreaCSS" property from the template popup_fckeditor_form.pt
  to the FCKeditor config file ckconfig-cps.js. This will ease customization
  that will only have to be done in the ckconfig-cps.js file.
- #1143 removed dependency on CPSBoxes in the popup forms
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- The Widget Types Tool has been removed. Widget code and registration
  gets simpler. The Compound Widget now also takes the role of the
  previous Customizable Widget.
- Previous standard Compound or Customizable widget types (Link Widget,
  Text Image Widget, Image Link Widget, Search Widget, Search Location
  Widget) are now defined in code using CPSProgrammerCompoundWidget.
- The prepare/validate method of the Compound Widget has a new
  'prevalidate' phase.
- Removed unused 'sort_function' code of vocabularies.
- added a singleton object FieldNamespace.fieldStorageNamespace to
  register methods made available in read/write_process_expression of
  Field objects. This is intended to be used by CPSDirectory to register
  dirCross(G|S)etList methods in String List Fields (cross references
  between directories).
- RichTextEditorWidget is deprecated. TextWidget should be used instead.
- Long Field and Long Widget are deprecated. Use the Int equivalents.
- Int Widget now stores None if it's not required and an empty string is
  entered.